--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 server.port = 8080
 server.servlet.session.persistent=false
-
-# gradebook service
-gradebook.url = http://localhost:8081
-gradebook.service = default
-# registration service
-registration.url = http://localhost:8080
+# URL of gradebook service,  
+# service options:  default | REST | MQ  
+#     meaning no messages, use Http REST, or use  message queue
+gradebook.service = default  
 registration.service = default
-
+# URL for redirect back to React after successful login
+frontend.post.login.url = http://localhost:3000/semester
+# google authentication provider
+spring.security.oauth2.client.registration.google.client-id = 327813662019-btdfnq2pn12l3duseoumr8hgkkr5ofpn.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret = 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
 # database properties
-spring.datasource.url = jdbc:mysql://localhost:3306/register
-spring.datasource.username = root
-spring.datasource.password = password
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
-
+spring.datasource.url=jdbc:mysql://localhost:3306/person
+spring.datasource.username=root
+spring.datasource.password=dw4$Database
+spring.jpa.hibernate.ddl-auto=update
 # debug = true
 # logging.level.org.springframework.security = TRACE
